--- a/RoboticArm/RoboticArm/Views/MainMasterDetailPage.xaml
+++ b/RoboticArm/RoboticArm/Views/MainMasterDetailPage.xaml
@@ -3,12 +3,56 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-			 xmlns:b="clr-namespace:Xamarin.Behaviors;assembly=Xamarin.Behaviors"
+			 xmlns:b="clr-namespace:Corcav.Behaviors;assembly=Corcav.Behaviors"
              x:Class="RoboticArm.Views.MainMasterDetailPage">
 
   <MasterDetailPage.Master>
-	  <ContentPage BackgroundColor="#03A9F4" Title="RoboticArm" Icon="{Binding Icon}">
+	  <ContentPage BackgroundColor="#3758AD" Title="RoboticArm" Icon="{Binding Icon}">
 		<ContentPage.Content>
+			<ListView 
+		        BackgroundColor="#F5F5F5"
+		        SeparatorColor="Transparent"
+		        Grid.ColumnSpan="3"
+		        Grid.Row="4"
+		        HasUnevenRows="true"
+		        ItemsSource="{Binding MenuItems}"
+				SelectedItem="{Binding SelectedMenuItem}"
+		        x:Name="ListViewMenu">
+		        <ListView.Header>
+		            <Grid>
+		                <Grid.ColumnDefinitions>
+		                    <ColumnDefinition Width="10"/>
+		                    <ColumnDefinition Width="*"/>
+		                    <ColumnDefinition Width="10"/>
+		                </Grid.ColumnDefinitions>
+		                <Grid.RowDefinitions>
+		                    <RowDefinition Height="30"/>
+		                    <RowDefinition Height="65"/>
+		                    <RowDefinition Height="Auto"/>
+		                    <RowDefinition Height="5"/>
+		                </Grid.RowDefinitions>
+
+		                <BoxView Grid.ColumnSpan="3" 
+		                         Grid.RowSpan="4"
+		                         BackgroundColor="#3758AD"/>
+		            </Grid>
+		        </ListView.Header>
+		        <ListView.ItemTemplate>
+		            <DataTemplate>
+		                <ViewCell>
+		                    <StackLayout Padding="12" Spacing="5" Orientation="Horizontal">
+		                        <BoxView WidthRequest="5" HeightRequest="0" />
+		                        <Label Text="{Binding Title}" FontSize="18" VerticalOptions="Center" />
+		                    </StackLayout>
+		                </ViewCell>
+		            </DataTemplate>
+		        </ListView.ItemTemplate>
+		        <b:Interaction.Behaviors>
+					<b:BehaviorCollection>
+						<b:EventToCommand EventName="ItemTapped" Command="{Binding SelectCommand}" />
+					</b:BehaviorCollection>
+				</b:Interaction.Behaviors>
+		    </ListView>
 		</ContentPage.Content>
 	</ContentPage>
   </MasterDetailPage.Master>
